<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Math Ref</string>
    <color name="white">#FFFFFF</color>
    <color name="dark_grey">#A7A9AC</color>
    <color name="light_grey">#F1F2F2</color>
    <string name="eq_title">Equation</string>
    <string name="eq_about">About</string>
    <string name="value_input">Value</string>
    <string name="eq_example">Example</string>
    <string name="search_title">Search</string>
    <string name="search_hint">e.g. vector</string>
    <string name="tools_rect_to_polar">Rectangular to Polar</string>
    <string name="tools_polar_to_rect">Polar to Rectangular</string>
    <color name="tools_text_color">#000</color>
    <string name="circle_solver_sss">sss</string>
    <string name="circle_solver_sas">sas</string>
    <string name="circle_solver_aas">aas</string>
    <string name="circle_solver_asa">asa</string>
    <string name="circle_solver_ssa">ssa</string>
    <string name="circle_solver_side">Side</string>
    <string name="circle_solver_angle">Angle</string>
    <string name="z_equals">"z = "</string>
    <string name="label_hint_a">"a"</string>
    <string name="label_hint_b">"b"</string>
    <string name="label_hint_c">"c"</string>
    <string name="label_hint_d">"d"</string>
    <string name="label_hint_e">"e"</string>
    <string name="label_r">r</string>
    <string name="label_i">"i"</string>
    <string name="label_theta">"θ"</string>
    <string name="plus">" + "</string>
    <string name="convert">"Convert"</string>
    <string name="calculate">Calculate</string>
    <string name="theta_bounds_180">"θ must be between -180 and 180"</string>
    <string name="circle_diagram">Circle Diagram</string>
    <string name="z_diagram">Z Diagram</string>
</resources>